--- a/index.html
+++ b/index.html
@@ -6,5 +6,43 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class = 'container'>
+            <h1>The Acme Home Page</h1>
+            <h2>Who We Are</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+                reprehenderit in voluptate velit esse cillum dolore eu 
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
+                proident, sunt in culpa qui officia deserunt mollit anim id est 
+                laborum.
+            </p>
+            <h2>What We Do</h2>
+            <p>
+                Libero id faucibus nisl tincidunt eget nullam. Suscipit adipiscing 
+                bibendum est ultricies integer quis auctor elit. Sed lectus 
+                vestibulum mattis ullamcorper velit sed ullamcorper morbi. 
+                Massa sapien faucibus et molestie. Sollicitudin aliquam ultrices 
+                sagittis orci a scelerisque purus semper. Non quam lacus 
+                suspendisse faucibus interdum posuere lorem ipsum. Ipsum dolor 
+                sit amet consectetur adipiscing elit duis tristique. Tortor at 
+                risus viverra adipiscing at in tellus integer. 
+                
+            </p>
+            <h2>Our Favorite Colors</h2>
+            <div class="darkgray">
+                <div class="squares" id="square1"></div>
+                <span>Tomato</span>
+            </div>
+            <div class="darkgray">
+                <div class="squares" id="square2"></div>
+                <span>DodgerBlue</span>
+            </div>
+            <h2>Our Team</h2>
+            <h2>Our Product</h2>
+        </div>
+    </body>
 
 </html>
